style: fix content overlapping footer

--- a/src/app/aboutme/aboutme.component.scss
+++ b/src/app/aboutme/aboutme.component.scss
@@ -35,3 +35,7 @@
         background-color: rgba(255, 255, 255, 0.8);
     }
 }
+
+.skills {
+    overflow: scroll;
+}
